--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ paginate: 5
 
 # Url
 baseurl: "" # the subpath of your site, e.g. /blog
-url: https://poentavalei.io
+url: https://poentavalei.com
 
 # SEO
 google_analytics: UA-148499280-1
