--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 name: 'Poenta Valei'
 aka: ''
 title: 'POENTA VALEI'
-payoff: "Magna digital e taxi"
-description: "El siicon no se magna, ea poenta sì. Digital e tecnoeogia par veneti"
+payoff: "Digital e tecnoeogia par veneti"
+description: "Digital e tecnoeogia par veneti. El siicon no se magna, ea poenta sì."
 lang: it_IT
 paginate: 5
 
